<resources>
    <string name="app_name">Networking</string>

    <string name="linkedin_url">https://api.linkedin.com/v1/people/~:(id,num-connections,picture-url,email-address,first-name,last-name,public-profile-url,location:(name),positions:(title,company:(name)))</string>
    <string name="error_login">Existió un error al momento de iniciar sesión, por favor intenta nuevamente</string>
    <string name="entrar">ENTER</string>
    <string name="entrar_label">To log in input your\nLinkedln username\nand password</string>
    <string name="de">username and password</string>

    <string name="url_base">http://nwmeeting.com</string>
    <string name="format_image_url">%1$s%2$s</string>
    <string name="asistir">ASSIST</string>
    <string name="asistencia">ATTENDANCE</string>
    <string name="eventos">EVENTS</string>
    <string name="detail">EVENT DETAIL</string>
    <string name="title_activity_maps">Map</string>
    <string name="continuar">CONTINUE</string>
    
    <string name="bienvenido">WELCOME!</string>
    <string name="selecciona_intereses_eventos">Select your interest.\nso we show events\nthat interest to you</string>
    <string name="tipo_industria">Industry type:</string>
    <string name="area_trabajo">Job area:</string>
    <string name="selecciona_industria">Pick an industry</string>
    <string name="selecciona_area">Pick an area</string>
    <string name="buscar">Buscar</string>

    <string name="on_boarding_two">Check the event\'s details\n(industry, place and date)</string>
    <string name="on_boarding_one">Validates the city\nwhere you are</string>
    <string name="on_boarding_three">Don’t forget to confirm\nyou\'re going to attend!</string>
    
    <string name="home">HOME</string>
    <string name="attendances">ATTENDING</string>
    <string name="settings">SETTINGS</string>

    <string name="no_attendances">Requests have not yet attendance at an event.</string>
    <string name="asistire">ASISTIRÉ</string>
    <string name="alert_attend">Really you want to attend this event?</string>
    <string name="success_event_request">Congratulations! You can attend this event</string>

    <string name="loading_data">Loading data.. please wait</string>
    <string name="industries">INDUSTRIES</string>
    <string name="areas">AREAS</string>
    <string name="confirm">CONFIRM</string>
    <string name="search_hint">Search..</string>
    <string name="no_results">This search returned no results, please try again</string>
    <string name="default_location">Bogotá, Colombia</string>
    <string name="type_industry">Type of industry:</string>
    <string name="area_interest">Area of interest:</string>
    <string name="log_out"><u>LOG OUT</u></string>

    <string name="address"><b>Address</b></string>
    <string name="hour"><b>Hour</b></string>

    <string name="format_address_hour">%1$s: %2$s</string>

    <string name="pick_here">Pick here</string>
    <string name="persons_attend">People attending</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="unattend_message">Are you sure you don\'t want to attend?</string>

    <string name="save_user_data">You want to save your data?</string>
    <string name="attending">ATTENDING</string>
    <string name="attend">ATTEND</string>
    <string name="share_text">I\'m attending an event, check it out http://nwmeeting.com</string>
    <string name="share">Share with</string>

    <string name="terms_one">By logging in you agree to the</string>
    <string name="terms">Terms and Conditions</string>
    <string name="terms_url">http://nwmeeting.com/termsandconditions</string>

</resources>
