<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bg_login"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:layout_marginBottom="@dimen/image_logo_margin_bottom"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/login_text_elements_size"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:text="@string/entrar_label"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/login_text_elements_size"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:text="@string/de"
                    android:drawablePadding="@dimen/drawable_linkedin_logo_padding"
                    android:drawableRight="@drawable/linkedin"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/entrar"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/login_text_elements_size"
            android:id="@+id/buttonEntrar" />
    </LinearLayout>
</LinearLayout>