<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/backgroundMenu"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:id="@+id/imageViewUser"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        android:text="JOSE LUIS RODRIGUEZ"
        android:id="@+id/textViewUserName"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bogota, Colombia"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:id="@+id/textViewCity"
        android:layout_gravity="center_horizontal" />

    <View android:layout_height="2dp"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:id="@+id/textViewHome"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attendances"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textViewAttendance" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/settings"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:id="@+id/textViewSettings" />
</LinearLayout>