<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:background="@color/backgroundMenu"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:id="@+id/imageViewUser"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/border_layout"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/user"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            style="@style/RegisterViewEditText"
            android:id="@+id/editTextUserName" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/border_layout"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/mail"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            style="@style/RegisterViewEditText"
            android:id="@+id/editTextUserMail" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/border_layout"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/location"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            style="@style/RegisterViewEditText"
            android:text="@string/default_location"
            android:id="@+id/editTextUserLocation" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_industry"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/border_layout"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/industria"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/RegisterViewEditText"
            android:hint="@string/industries"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="true"
            android:textColor="@color/textDark"
            android:drawableRight="@drawable/ic_plus"
            android:drawableTint="@color/tintPlusIcon"
            android:id="@+id/editTextIntereses"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/containerIndustries"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_interest"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/border_layout"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/areainteres"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="true"
            style="@style/RegisterViewEditText"
            android:hint="@string/areas"
            android:textColor="@color/textDark"
            android:drawableRight="@drawable/ic_plus"
            android:drawableTint="@color/tintPlusIcon"
            android:id="@+id/editTextArea"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/containerAreas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

</LinearLayout>