<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_interest_area"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/welcome_margin_bottom"
            android:layout_marginTop="@dimen/welcome_margin_top"
            android:gravity="center"
            android:text="@string/bienvenido"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_text_elements_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="@dimen/activity_top_bottom_margin"
            android:gravity="center"
            android:text="@string/selecciona_intereses_eventos"
            android:textColor="@android:color/white"
            android:textSize="@dimen/continue_button_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:focusable="false"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/tipo_industria"
                android:textColor="@android:color/white"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:id="@+id/industriesContainerArea"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/editTextIntereses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:focusable="false"
                        android:hint="@string/pick_here"
                        android:maxLines="1"
                        android:textSize="20sp"
                        android:padding="10dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <View
                        android:layout_width="200dp"
                        android:layout_height="2dp"
                        android:background="@android:color/white"
                        android:layout_alignBottom="@+id/editTextIntereses"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="10dp"
                        android:layout_toLeftOf="@+id/imageViewPlusIndustries"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <ImageView
                        android:id="@+id/imageViewPlusIndustries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_plus"
                        android:paddingBottom="-20dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/containerIndustries"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:focusable="false"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/area_trabajo"
                android:textColor="@android:color/white"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:id="@+id/areasContainerArea"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/editTextArea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:focusable="false"
                        android:hint="@string/pick_here"
                        android:maxLines="1"
                        android:textSize="20sp"
                        android:padding="10dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <View
                        android:layout_width="200dp"
                        android:layout_height="2dp"
                        android:background="@android:color/white"
                        android:layout_alignBottom="@+id/editTextArea"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="10dp"
                        android:layout_toLeftOf="@+id/imageViewPlusAreas"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />


                    <ImageView
                        android:id="@+id/imageViewPlusAreas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_plus"
                        android:paddingBottom="-20dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/containerAreas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonContinuar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/continuar"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/continue_button_size" />
    </LinearLayout>

</LinearLayout>